--- a/PawnInitialization.uplugin
+++ b/PawnInitialization.uplugin
@@ -19,5 +19,11 @@
 			"Type": "Runtime",
 			"LoadingPhase": "PreDefault"
 		}
+	],	
+	"Plugins": [
+		{
+			"Name": "ModularGameplay",
+			"Enabled": true
+		}
 	]
 }
